add responsive to TaC

--- a/TaC.html
+++ b/TaC.html
@@ -52,17 +52,19 @@
 </header>
 
 <section class="relative">
-      <div class="absolute left-[420px] transform -translate-x-1/2 pointer-events-none -z-1 max-h[1280px] max-w[821px]" aria-hidden="true">
+      <div class="absolute left-0 z-[-1] top-0 xl:top-[-15.5%] lg:top-[-10%] md:top-[-6%]" aria-hidden="true">
         <img src="imges/Group.svg" alt="">
       </div>
-    <div class=" mx-5 md:mx-11 lg:mx-20 mt-[85px] w-11/12">
-        <h1 class="text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-[86px] aos-init aos-animate text-cyan-500">الشروط والأحكام</h1>
-        <p class="text-base lg:text-2xl 2xl:text-[26px] leading-[40px] md:leding-[62px]">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.</p>
+    <div class=" mx-5 md:mx-11 lg:mx-20 mt-2.5 md:mt-24 xl:mt-20 w-11/12">
+        <h1 class="text-2xl md:text-[45px] xl:text-[52px] leading-[62px] font-bold leading-tighter tracking-tighter mb-5 md:mb-11 xl:mb-20 aos-init aos-animate text-cyan-500">الشروط والأحكام</h1>
+        <p class="leading-10 md:leading-[62px] text-base md:text-[22px] xl:text-[26px]">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.ومن هنا وجب على المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على المصمم عناء البحث عن نص بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على أي تصميم دون مشكلة فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.</p>
     </div>
 
+    </section>
+    
     <footer>
         <div class="mx-5 md:mx-11 lg:mx-20 mt-[216px]">
-            <img src="imges/elmam-logo-1.svg" alt="">
+            <img src="imges/elmam-logo-1.svg" alt="" class="md:w-[96px] md:h-[59px] w-[73px] h-[45px]">
         <h1 class="text-lg lg:text-base font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500 mt-12" data-aos="zoom-y-out">
             إلمام .. كُن مُلماً بمنشأتك</h1>
     </div>
@@ -70,30 +72,30 @@
     <div class="  lg:flex lg:order-1 w-[50%] mt-12 mx-5 md:mx-11 lg:mx-20 lg:text-[22px]" id="mobile-menu-2" >
                 <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 w-full justify-between lg:gap-[93px] lg:m-auto">
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max" aria-current="page">من نحن</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal" aria-current="page">من نحن</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max">سياسة الخصوصية</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">سياسة الخصوصية</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max">الشروط والأحكام</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الشروط والأحكام</a>
                     </li>
                     <li>
-                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max">الدعم الفني</a>
+                        <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الدعم الفني</a>
                     </li>
                 </ul>
     </div>
 
         <div class="mt-[86px] mx-5 md:mx-11 lg:mx-20 mb-8 flex justify-between">
             <div>
-                <p>جميع الحقوق محفوظة © 2024 | لموقع إلمام </p>
+                <p class="text-[10px] md:text-[15px]">جميع الحقوق محفوظة © 2024 | لموقع إلمام </p>
             </div>
-            <div class="flex"> <img src="imges/instagram-3.svg" alt="" class="ml-1.5">
-                <img src="imges/x-2.svg" alt="">
+            <div class="flex"> 
+                <img src="imges/instagram-3.svg" alt="" class="ml-1.5 md:w-[34px] md:h-[34px] w-[25.5px] h-[25.5px]">
+                <img src="imges/x-2.svg" alt="" class="md:w-[34px] md:h-[34px] w-[25.5px] h-[25.5px]">
             </div>
         </div>
     </footer>
-    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
 </html>
