--- a/main.html
+++ b/main.html
@@ -485,7 +485,7 @@
   </div>
   </section>
   <!-- ====== FAQ Section End -->
-  <div class="max-w-4xl lg:mx-auto mx-auto text-center">
+  <section class="max-w-4xl lg:mx-auto mx-auto text-center">
       <div class="py-16 px-7 rounded-md bg-white">
 
     <div class="mb-16">
@@ -526,8 +526,42 @@
            </div><!-- Grid End -->
          </form>
       </div>
-   </div>
+  </section>
+    
+  <footer>
+   <div class="mx-5 md:mx-11 lg:mx-20 mt-[216px]">
+       <img src="imges/elmam-logo-1.svg" alt="" class="md:w-[96px] md:h-[59px] w-[73px] h-[45px]">
+   <h1 class="text-lg lg:text-base font-bold leading-tighter tracking-tighter aos-init aos-animate text-cyan-500 mt-12" data-aos="zoom-y-out">
+       إلمام .. كُن مُلماً بمنشأتك</h1>
+</div>
 
+<div class="  lg:flex lg:order-1 w-[50%] mt-12 mx-5 md:mx-11 lg:mx-20 lg:text-[22px]" id="mobile-menu-2" >
+           <ul class=" flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 w-full justify-between lg:gap-[93px] lg:m-auto">
+               <li>
+                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal" aria-current="page">من نحن</a>
+               </li>
+               <li>
+                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">سياسة الخصوصية</a>
+               </li>
+               <li>
+                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الشروط والأحكام</a>
+               </li>
+               <li>
+                   <a href="#" class="block py-2 pr-4 pl-3 text-black lg:hover:bg-transparent lg:border-0 hover:text-cyan-500 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent lg:w-max text-xs md:text-xl xl:text-2xl font-normal">الدعم الفني</a>
+               </li>
+           </ul>
+</div>
+
+   <div class="mt-[86px] mx-5 md:mx-11 lg:mx-20 mb-8 flex justify-between">
+       <div>
+           <p class="text-[10px] md:text-[15px]">جميع الحقوق محفوظة © 2024 | لموقع إلمام </p>
+       </div>
+       <div class="flex"> 
+           <img src="imges/instagram-3.svg" alt="" class="ml-1.5 md:w-[34px] md:h-[34px] w-[25.5px] h-[25.5px]">
+           <img src="imges/x-2.svg" alt="" class="md:w-[34px] md:h-[34px] w-[25.5px] h-[25.5px]">
+       </div>
+   </div>
+</footer>
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
