--- a/log-in.html
+++ b/log-in.html
@@ -5,48 +5,54 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>log-in</title>
     </head>
+	    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="confing.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <body class="font-normal overflow-x-hidden" style="
     font-family: Janna LT;">
-    <section>
+    <section class="flex justify-between	">
         <div>
             <img src="imges/Group-sing-in-lg.svg" alt="" class="absolute
             ">
+
+            <img src="imges/logo-1-sing-in.svg" alt="" class="mt-[390px] ml-[329px]">
+            <h1 class="text-[40px] mt-[81px] ml-[265px]">إلمام .. كُن مُلماً بمنشأتك</h1>
         </div>
-        <div>
-            <img src="imges/logo-1-sing-in.svg" alt="">
-            <h1>إلمام .. كُن مُلماً بمنشأتك</h1>
-        </div>
 
 
 
 
 
-<div class="relative   min-h-screen  sm:flex sm:flex-row  justify-center bg-transparent rounded-3xl shadow-xl">
+<div class="mr-[139px]">
 	<div class="flex justify-center self-center  z-10">
-		<div class="p-12 bg-white mx-auto rounded-3xl w-96 ">
-            <div>
-                <img src="imges/logo-2-log-in.svg" alt="">
-                <h1>تسجيل الدخول</h1>
+		<div class="p-12 bg-white mx-auto rounded-3xl w-96 w-fit ">
+            <div class="mt-[83px]">
+
+					<img src="imges/logo-2-log-in.svg" class="mb-[73px] m-auto" alt="" >
+
+                <h1 class="mb-[61px] ml-11 text-3xl text-center ">تسجيل الدخول</h1>
             </div>
-			<div class="space-y-6">
+			<div class="space-y-6 w-[503px]">
 				<div class="">
-					<input class=" w-full text-sm  px-4 py-3 bg-gray-200 focus:bg-gray-100 border  border-gray-200 rounded-lg focus:outline-none focus:border-purple-400" type="" placeholder="البريد الالكتروني">
+					<input class=" w-full text-sm  px-4 py-3 bg-gray-200 focus:bg-gray-100 border  border-gray-200 rounded-[15px] focus:outline-none focus:border-purple-400 block text-end	h-16" type="" placeholder="البريد الالكتروني">
             </div>
 					<div class="relative" x-data="{ show: true }">
-						<input placeholder="كلمة المرور" :type="show ? 'password' : 'text'" class="text-sm text-gray-200 px-4 py-3 rounded-lg w-full bg-gray-200 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400">
-						<div class="flex items-center absolute inset-y-0 right-0 mr-3  text-sm leading-5">
+						<input placeholder="كلمة المرور" :type="show ? 'password' : 'text'" class="text-sm text-gray-200 px-4 py-3 rounded-[15px] w-full bg-gray-200 focus:bg-gray-100 border border-gray-200 focus:outline-none focus:border-purple-400 block text-end	h-16">
+						<div class="flex items-center absolute inset-y-0 left-0 ml-3  text-sm leading-5">
 							<svg @click="show = !show" :class="{'hidden': !show, 'block':show }"
 								class="h-4 text-purple-700" fill="none" xmlns="http://www.w3.org/2000/svg"
 								viewbox="0 0 576 512">
-								<path fill="currentColor"
+								<path fill="#B3B3B3"
 									d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z">
 								</path>
 							</svg>
 							<svg @click="show = !show" :class="{'block': !show, 'hidden':show }"
 								class="h-4 text-purple-700" fill="none" xmlns="http://www.w3.org/2000/svg"
 								viewbox="0 0 640 512">
-								<path fill="currentColor"
+								<path fill="#B3B3B3"
 									d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z">
 								</path>
 							</svg>
@@ -55,7 +61,7 @@
 
 
 
-                    <div class="flex items-start">
+                    <div class="flex items-start mb-[67px]">
 						<div class="flex items-start">
 							<div class="flex items-center h-5">
 								<input id="remember" aria-describedby="remember" type="checkbox" class="bg-gray-50 border border-gray-300 focus:ring-3 focus:ring-blue-300 h-4 w-4 rounded dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800" required="">
@@ -67,16 +73,14 @@
 							<a href="#" class="text-sm text-blue-700 hover:underline ml-auto dark:text-blue-500">هل نسيت كلمة المرور؟</a>
 						</div>
 
-					<div>
-						<button type="submit" class="w-full flex justify-center bg-purple-800  hover:bg-purple-700 text-gray-100 p-3  rounded-lg tracking-wide font-semibold  cursor-pointer transition ease-in duration-500">
-                Sign in
-            </button>
-            <div class="mb-7">
-				<p class="text-gray-400">ليس لديك حساب؟<a href="#"
-						class="text-sm text-purple-700 hover:text-purple-700">إنشاء حساب</a></p>
+					<div class="">
+						<button type="submit" class="mt-[67px] w-full text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold  text-sm  pb-2 m-auto dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 h-11 rounded-[15px]  min-w-28  text-center block text-center h-16 text-xl	">تسجيل الدخول</button>
+            <div class="mb-7 text-center mt-11 text-sm	">
+				<p class="text-gray-400"> ليس لديك حساب؟<a href="#"
+						class="text-sm text-purple-700 hover:text-purple-700"> إنشاء حساب</a></p>
 			</div>
-            <div class="mt-7 text-center text-gray-300 text-xs">
-                <span>
+            <div class="mt-7 text-center text-gray-300 text-xs mt-[52%]">
+                <span class="text-base">
             جميع الحقوق محفوظة © 2024 | لموقع إلمام
             </div>
 
@@ -88,4 +92,6 @@
 </section>
 </body>
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
+
 </html>
