Confirmation message page working on

--- a/Confirmation-messageا.html
+++ b/Confirmation-messageا.html
@@ -13,7 +13,32 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <body class="font-normal overflow-x-hidden" style="
     font-family: Janna LT;">
+<section>
+            <div>
+            <img src="imges/Group-Confirmation-message.svg" alt="" class="absolute">
+            <img src="imges/logo-1-sing-in.svg" alt="" class="m-auto">
+            <h1 class="text-[40px] mt-[28px] text-center">إلمام .. كُن مُلماً بمنشأتك</h1>
+        </div>
+            <div class="w-[1540px] h-[811px] absolute z-10 bg-[#25A0D5] ml-[93px]">
+            <img src="imges/logo-white.svg" alt="" class="m-auto">
+            <h1 class="text-[40px] mt-[28px] text-center text-white">إلمام .. كُن مُلماً بمنشأتك</h1>
+        </div>
+        <div>
+            <h1>تأكيد أو تفعيل الحساب</h1>
+            <p>مرحباً  <a href="farhan.alaiban@gmail.com">farhan.alaiban@gmail.com</a>شكراً لتسجيلك في إلمام، لاستكمال عملية التسجيل يرجى الضغط على الزر أدناه لتأكيد عنوان البريد الإلكتروني
+الخاص بك وتفعيل الحساب </p>
 
+                        <a href="#" class="lg:hidden text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold rounded-lg text-sm px-4 pb-2 pt-[11px] m-auto dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 h-11 rounded-[10px] flex justify-center min-w-28">تسجيل الدخول</a>
+
+                        <h1>إذا كان الزر لا يعمل، يمكنك نسخ ولصق الرابط التالي إلى متصفحك.</h1>
+            <a href="https: //www.etmamalarabia.sa/user_dash">https: //www.etmamalarabia.sa/user_dash</a>
+            <img src="" alt="">
+            <div>
+                <h1>أطيب التحيات،</h1>
+                <h1>فريق إلمام</h1>
+            </div>
+        </div>
+</section>
 </body>
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
