--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
     </section>
     <section class="mt-48	">
       <div class="mb-16">
-        <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
+        <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter sm:mb-10 aos-init aos-animate text-cyan-500">عن إلمام</h2>
         <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">تعريف عن الرؤية والاهداف</h3>
       </div>
       <div class="md:flex md:justify-center inline-grid gap-40">
@@ -104,47 +104,57 @@
       </div>
     </section>
     <section class="mt-60">
-      <div class="flex flex-col">
+      <div class="flex flex-col mb-[-70px]">
         <div class="mb-16">
-          <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
+          <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter sm:mb-10 aos-init aos-animate text-cyan-500">أهمية إلمام</h2>
           <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
         </div>
         <div class="md:flex md:justify-center inline-grid gap-5">
-          <div class="w-[252px] h-[230px] xl:w-[401px] md:mr-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl">
+          <div class="w-[252px] h-[230px] xl:w-[401px] md:mr-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
               <img src="imges/money-4.svg" alt="" class="ml-5">
               <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر مالية</h4>
             </div>
             <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب الهدر المالي بسبب عدم معرفة بعض الإجراءات الحكومية
-  <br>
-  - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>
+              <br>
+              - تجنب مخالفات تحدث نتيجة كثرة العمليات الحكومية وترابطها</p>
           </div>
-          <div class="w-[252px] h-[230px] xl:w-[401px] md:m-0 m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl">
+          <div class="w-[252px] h-[230px] xl:w-[401px] md:m-0 m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
               <img src="imges/phone.svg" alt="" class="ml-5">
               <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر نظامية</h4>
             </div>
             <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب المشاكل الناتجة عن التوطين الوهمي
-<br>
-- تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>
+              <br>
+              - تجنب عدم الاستفادة من الدعم الحكومي للمنشأة</p>
           </div>
-          <div class="w-[252px] h-[230px] xl:w-[401px]  md:ml-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl">
+          <div class="w-[252px] h-[230px] xl:w-[401px]  md:ml-auto m-auto border-2 border-slate-200 px-5 pt-7 pb-10 rounded-xl bg-white">
             <div class="flex justify-start mb-10">
               <img src="imges/computer.svg" alt="" class="ml-5">
               <h4 class="mt-auto mb-auto font-bold text-xl	 md:text-[26px] xl:text-3xl">مخاطر إدارية</h4>
             </div>
             <p class="text-xs md:text-sm	xl:text-lg text-slate-500 leading-normal">
               - تجنب عدم قدرة المسؤولين عن العمليات الحكومية على قيادة المنشأة
-  <br>
-  - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>
+              <br>
+              - تجنب عدم وجود تصور واضح للإدارة التنفيذية لاتخاذ القرارات السليمة</p>
           </div>
         </div>
       </div>
-      <div class="flex">
-      <div class="">
-        <h5 class="mb-10">يمكنك الأن معرفة حالة منشأتك</h5>
+      <div class="top-[400%] lg:top-[380%] md:top-[320%] left-0 md:right-0 absolute z-[-1]">
+         <img src="imges/Group-phone.svg" alt="" class="md:hidden">
+         <img src="imges/Group-lap.svg" alt="" class="hidden md:flex w-[718px] h-[959px]">
+      </div>
+      <div class=" mb-28 mt-32">
+         <div class="flex justify-evenly mb-10">
+            <img src="imges/rports_phone.svg" alt="" class="mt-[25%] w-[136px] h-[295px] md:hidden">
+            <img src="imges/dashboard_phone.svg" alt="" class=" w-[136px] h-[295px] md:hidden">
+            <img src="imges/reports_lap.svg" alt="" class="hidden md:mt-[25%] md:flex w-[300px] h-[439px] lg:w-[446px] lg:h-[585px]">
+            <img src="imges/dash_lap.svg" alt="" class="hidden md:flex w-[300px] h-[439px] lg:w-[446px] lg:h-[585px]">
+         </div>
+      <div class="md:mr-[35%] lg:mr-[60%] md:mt-[-25%] lg:mt-[-20%] md:mb-44">
+        <h5 class="mb-8 text-center">يمكنك الأن معرفة حالة منشأتك</h5>
         <button class="text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 w-28 h-11 rounded-[10px] flex justify-center min-w-28 lg:w-max m-auto">انشاء تقارير</button>
       </div>
       </div>
@@ -152,7 +162,7 @@
     <section class="relative mx-auto px-4 sm:px-6 bg-sky-500">
       <div class="py-12 md:py-20">
           <div class="max-w-3xl mx-auto text-center pb-12 md:pb-20">
-            <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
+            <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter sm:mb-10 aos-init aos-animate text-white">أهمية إلمام</h2>
             <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl	font-bold">بعض المخاطر التي تتجنبها بإستخدام إلمام</h3>
           </div>
           <div class="max-w-sm mx-auto grid gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
