--- a/main.html
+++ b/main.html
@@ -167,42 +167,42 @@
           </div>
           <div class="max-w-sm mx-auto grid gap-6 grid-cols-2 lg:grid-cols-4 items-start md:max-w-2xl lg:max-w-none font-bold">
               <!-- Card 1 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                  <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">1</div>
                   <p class="text-center">تحسين نطاق المنشأة والمؤثرات عليه بأسهل الحلول وأقل التكاليف</p>
               </div>
               <!-- Card 2 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">2</div>
                   <p class="text-center">توافق المنشأة مع لوائح وبرامج توطين المهن</p>
               </div>
               <!-- Card 3 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">3</div>
                   <p class="text-center">نسب الجنسيات في المنشأة ومدى قدرتها على الاستقطاب</p>
               </div>
               <!-- Card 4 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">4</div>
                   <p class="text-center">كيفية حل المشكلات المانعة لخدمات نقل الكفالة والتأشيرات</p>
               </div>
               <!-- Card 5 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">5</div>
                   <p class="text-center">التنبيهات عن حالة دعم صندوق الموارد البشرية والمستحقين له</p>
               </div>
               <!-- Card 6 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">6</div>
                   <p class="text-center">بناء التصور المستقبلي لحالة المنشأة ومساعدة اصحاب القرار</p>
               </div>
               <!-- Card 7 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">7</div>
                   <p class="text-center">مساعدة الإدارة المالية لقياس تكلفة أثر المشكلات الكامنة</p>
               </div>
               <!-- Card 8 -->
-              <div class="relative flex flex-col items-center px-10 py-8 bg-white rounded-lg shadow-xl h-full">
+              <div class="relative flex flex-col items-center sm:px-10 sm:py-8 px-1 py-10 bg-white rounded-lg shadow-xl h-full max-w-[205px] xl:max-w-[373px] md:m-auto">
                 <div class="absolute right-0 top-0 px-4 py-2 bg-[#E4F1F6] rounded-lg">8</div>
                   <p class="text-center"> معرفة كفاءة موظفي أقسام العمليات الحكومية وتوجيههم</p>
               </div>
