--- a/main.html
+++ b/main.html
@@ -225,10 +225,10 @@
   >
   <div class="container mx-auto">
     <div class="mb-16">
-      <h2 class="flex justify-center text-lg lg:text-5xl md:text-4xl font-bold leading-tighter tracking-tighter mb-10 aos-init aos-animate text-cyan-500">الأسئلة الشائعة</h2>
-      <h3 class="flex justify-center text-2xl	font-bold">أسئلة وأجوبة عن موقع إلمام وكيفية استخدامه</h3>
+      <h2 class="flex justify-center text-3xl xl:text-[52px] md:text-5xl font-bold leading-tighter tracking-tighter sm:mb-10 aos-init aos-animate text-cyan-500">الأسئلة الشائعة</h2>
+      <h3 class="flex justify-center text-base md:text-[26px] xl:text-3xl font-bold">أسئلة وأجوبة عن موقع إلمام وكيفية استخدامه</h3>
     </div>
-     <div class="flex flex-wrap -mx-4">
+     <div class="flex flex-wrap">
         <div class="w-full px-4 lg:w-1/2">
            <div
               class="w-full p-2 mb-8 bg-white rounded-lg shadow-[0px_20px_95px_0px_rgba(201,203,204,0.30)] dark:shadow-[0px_20px_95px_0px_rgba(0,0,0,0.30)] dark:bg-dark-2"
@@ -256,7 +256,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-lg font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -264,7 +264,7 @@
               </button>
               <div x-show="openFaq1" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-base leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -299,7 +299,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-lg font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -307,7 +307,7 @@
               </button>
               <div x-show="openFaq2" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-base leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -342,7 +342,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-lg font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -350,7 +350,7 @@
               </button>
               <div x-show="openFaq3" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-base leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -387,7 +387,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-lg font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -395,7 +395,7 @@
               </button>
               <div x-show="openFaq4" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-base leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -430,7 +430,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-lg font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -438,7 +438,7 @@
               </button>
               <div x-show="openFaq5" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-base leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
@@ -473,7 +473,7 @@
                  </div>
                  <div class="w-full">
                     <h4
-                       class="mt-1 text-lg font-bold text-dark dark:text-white pr-5"
+                       class="mt-1 text-sm md:text-lg	xl:text-2xl	 font-bold text-dark dark:text-white pr-5"
                        >
                        How long we deliver your first blog post?
                     </h4>
@@ -481,7 +481,7 @@
               </button>
               <div x-show="openFaq6" class="faq-content pr-5 border-t border-[#D9EBF3] text-right">
                  <p
-                    class="py-3 text-base leading-relaxed text-body-color dark:text-dark-6"
+                    class="py-3 text-xs md:text-sm	xl:text-xl leading-relaxed text-body-color dark:text-dark-6"
                     >
                     It takes 2-3 weeks to get your first blog post ready. That
                     includes the in-depth research & creation of your monthly
