--- a/Confirmation-messageا.html
+++ b/Confirmation-messageا.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="
+    direction: rtl;
+">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>log-in</title>
     </head>
-	    <script src="https://cdn.tailwindcss.com"></script>
+	<script src="https://cdn.tailwindcss.com"></script>
     <script src="confing.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -14,30 +16,50 @@
 <body class="font-normal overflow-x-hidden" style="
     font-family: Janna LT;">
 <section>
-            <div>
-            <img src="imges/Group-Confirmation-message.svg" alt="" class="absolute">
-            <img src="imges/logo-1-sing-in.svg" alt="" class="m-auto">
-            <h1 class="text-[40px] mt-[28px] text-center">إلمام .. كُن مُلماً بمنشأتك</h1>
+    <div>
+        <img src="imges/logo-1-sing-in.svg" alt="" class="m-auto">
+        <h1 class="text-[40px] mt-[28px] text-center">إلمام .. كُن مُلماً بمنشأتك</h1>
+        <img src="imges/Group-Confirmation-message.svg" alt="" class="absolute top-0  right-[971px]">
+    </div>
+    <div>
+    <div class="w-[] h-[] absolute z-10 bg-[#25A0D5] ml-[427px]  rounded-[40px] rounded-br-[33px] rounded-bl-[33px] left-0">
+        <div class="bg-white rounded-[33px]">
+        <h1 class="text-[#25A0D5] text-center text-[40px] leading-normal">تأكيد أو تفعيل الحساب</h1>
+
+        <div class="flex ml-[50px] whitespace-pre mt-[34px] text-3xl">
+
+            <p class="leading-normal  ">   مرحباً </p>
+            <h1 class="underline  text-[#147EF9] " style="
+            font-family: Tajawal;
+                "> farhan.alaiban@gmail.com </h1>
         </div>
-            <div class="w-[1540px] h-[811px] absolute z-10 bg-[#25A0D5] ml-[93px]">
-            <img src="imges/logo-white.svg" alt="" class="m-auto">
-            <h1 class="text-[40px] mt-[28px] text-center text-white">إلمام .. كُن مُلماً بمنشأتك</h1>
+        <p class="leading-normal text-3xl ">   شكراً لتسجيلك في إلمام، لاستكمال عملية التسجيل يرجى الضغط على الزر أدناه لتأكيد عنوان البريد الإلكتروني الخاص بك وتفعيل الحساب</p>
+
+        <div class=" flex justify-end">
+
+            <a href="#" class=" text-white  hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold rounded-lg text-sm px-4 pb-2 pt-[11px]  dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 h-11 rounded-[10px]  justify-center min-w-28" style="
+            width: 233px;
+            height: 65px;
+            border-radius: 15px;
+            background: #14B411;
+            text-align: center;
+            font-size: 24px;
+            line-height: normal;
+        ">تفعيل الحساب</a>
         </div>
+
+        <h1>إذا كان الزر لا يعمل، يمكنك نسخ ولصق الرابط التالي إلى متصفحك.</h1>
+        <a href="https: //www.etmamalarabia.sa/user_dash">https: //www.etmamalarabia.sa/user_dash</a>
+        <img src="" alt="">
         <div>
-            <h1>تأكيد أو تفعيل الحساب</h1>
-            <p>مرحباً  <a href="farhan.alaiban@gmail.com">farhan.alaiban@gmail.com</a>شكراً لتسجيلك في إلمام، لاستكمال عملية التسجيل يرجى الضغط على الزر أدناه لتأكيد عنوان البريد الإلكتروني
-الخاص بك وتفعيل الحساب </p>
-
-                        <a href="#" class="lg:hidden text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold rounded-lg text-sm px-4 pb-2 pt-[11px] m-auto dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 h-11 rounded-[10px] flex justify-center min-w-28">تسجيل الدخول</a>
-
-                        <h1>إذا كان الزر لا يعمل، يمكنك نسخ ولصق الرابط التالي إلى متصفحك.</h1>
-            <a href="https: //www.etmamalarabia.sa/user_dash">https: //www.etmamalarabia.sa/user_dash</a>
-            <img src="" alt="">
-            <div>
-                <h1>أطيب التحيات،</h1>
-                <h1>فريق إلمام</h1>
-            </div>
+            <h1>أطيب التحيات،</h1>
+            <h1>فريق إلمام</h1>
         </div>
+    </div>
+            <img src="imges/logo-white.svg" alt="" class="m-auto mt-[]">
+            <h1 class="text-[40px] mt-[28px] text-center text-white mt-12">إلمام .. كُن مُلماً بمنشأتك</h1>
+    </div>
+    </div>
 </section>
 </body>
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js"></script>
