--- a/log-in.html
+++ b/log-in.html
@@ -64,7 +64,7 @@
 									<p class="text-gray-400"> ليس لديك حساب؟<a href="#"
 										class="ext-sm  hover:text-[#25A0D5] text-[#25A0D5]"> إنشاء حساب</a></p>
 									</div>
-										<div class="mt-7 text-center text-gray-300 text-xs mt-[150%] sm:mt-[52%] md:mt-[17%] xl:mt-[52%]">
+										<div class="mt-7 text-center text-gray-300 text-xs mt-[175%] sm:mt-[95%] md:mt-[15%] xl:mt-[65%]">
 											<span class="text-base">
                     جميع الحقوق محفوظة © 2024 | لموقع إلمام
                     </div>
@@ -82,7 +82,7 @@
             ">
 
             <img src="imges/logo-1-sing-in.svg" alt="" class="mt-[390px] ml-[329px]">
-            <h1 class="text-[40px] mt-[81px] ml-[265px]">إلمام .. كُن مُلماً بمنشأتك</h1>
+            <h1 class="text-[40px] mt-[81px] ml-[265px] w-max">إلمام .. كُن مُلماً بمنشأتك</h1>
         </div>
     </section>
 </body>
