--- a/log-in.html
+++ b/log-in.html
@@ -59,7 +59,9 @@
 								<a href="#" class="text-sm  hover:underline mr-auto dark:text-[#25A0D5] hover:text-[#25A0D5] text-[#25A0D5]">هل نسيت كلمة المرور؟</a>
 							</div>
 							<div class="">
-								<button type="submit" class="mt-10 md:mt-[67px] text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold  text-sm  pb-2 m-auto dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 rounded-[15px]  min-w-28  text-center block text-center text-xl w-full h-[45px] md:w-[500px] md:h-[60px] t">تسجيل الدخول</button>
+								<button type="submit" class="mt-10 md:mt-[67px] text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold  text-sm  pb-2 m-auto dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 rounded-[15px]  min-w-28  text-center block text-center text-xl w-full h-[45px] md:w-[500px] md:h-[60px] "style="
+    box-shadow: 0px 1.852px 3.148px 0px rgba(0, 0, 0, 0.00), 0px 8.148px 6.519px 0px rgba(0, 0, 0, 0.01), 0px 20px 13px 0px rgba(0, 0, 0, 0.01), 0px 38.519px 25.481px 0px rgba(0, 0, 0, 0.01), 0px 30px 46.852px 0px rgba(0, 0, 0, 0.03);
+">تسجيل الدخول</button>
 								<div class="mb-7 text-center mt-11 text-sm	">
 									<p class="text-gray-400"> ليس لديك حساب؟<a href="#"
 										class="ext-sm  hover:text-[#25A0D5] text-[#25A0D5]"> إنشاء حساب</a></p>
