--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </head>
 <body class="font-normal overflow-x-hidden" style="
     font-family: Janna LT;">
-    <header>
+    <header class="fixed top-0 z-[99] w-full">
     <nav class="bg-white border-gray-200 lg:px-6 dark:bg-gray-800 p-5 lg:shadow-none shadow-md">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
             <a href="https://elmam.com" class="flex items-center">
@@ -51,7 +51,7 @@
     </nav>
 </header>
 
-<main>
+<main class="relative top-[87px]">
     <section class="relative">
       <div class="absolute left-0 z-[-1] top-[-15.5%] xl:top-[-15.5%] lg:top-[-46.5%] sm:top-[-73.5%] md:top-[-70.5%]" aria-hidden="true">
         <img src="imges/Group.svg" alt="">
@@ -142,7 +142,7 @@
           </div>
         </div>
       </div>
-      <div class="top-[400%] xl:top-[350%] 3xl:top-[205%] lg:top-[380%] md:top-[320%] left-0 md:right-0 absolute z-[-1]">
+      <div class="top-[40%] xl:top-[35%] 3xl:top-[20%] lg:top-[38%] md:top-[32%] left-0 md:right-0 absolute z-[-1]">
          <img src="imges/Group-phone.svg" alt="" class="md:hidden">
          <img src="imges/Group-lap.svg" alt="" class="hidden md:flex xl:hidden w-[718px] h-[959px]">
          <img src="imges/Group-desk.svg" alt="" class="hidden xl:flex w-[849.49px] h-[1265px]">
