--- a/Confirmation-messageا.html
+++ b/Confirmation-messageا.html
@@ -1,68 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" style="
-    direction: rtl;
-">
+<html lang="en" dir="rtl">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>log-in</title>
+        <title>Account activation message</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script src="confing.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
+        <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     </head>
-	<script src="https://cdn.tailwindcss.com"></script>
-    <script src="confing.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css"  rel="stylesheet" />
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-<body class="font-normal overflow-x-hidden" style="
-    font-family: Janna LT;">
-<section>
-    <div>
-        <img src="imges/logo-1-sing-in.svg" alt="" class="m-auto">
-        <h1 class="text-[40px] mt-[28px] text-center">إلمام .. كُن مُلماً بمنشأتك</h1>
-        <img src="imges/Group-Confirmation-message.svg" alt="" class="absolute top-0  right-[971px]">
-    </div>
-    <div>
-    <div class="w-[] h-[] absolute z-10 bg-[#25A0D5] ml-[427px]  rounded-[40px] rounded-br-[33px] rounded-bl-[33px] left-0">
-        <div class="bg-white rounded-[33px]">
-        <h1 class="text-[#25A0D5] text-center text-[40px] leading-normal">تأكيد أو تفعيل الحساب</h1>
-
-        <div class="flex ml-[50px] whitespace-pre mt-[34px] text-3xl">
-
-            <p class="leading-normal  ">   مرحباً </p>
-            <h1 class="underline  text-[#147EF9] " style="
-            font-family: Tajawal;
-                "> farhan.alaiban@gmail.com </h1>
+    <body class="font-normal overflow-x-hidden" style="font-family: Janna LT;">
+        
+	    <img src="imges/Group-login.svg" alt="" class="hidden sm:flex xl:hidden absolute top-0 left-[-10%] z-[-1] w-[814.802px] h-[894.175px]">
+	    <img src="imges/Group-phone-2.svg" alt="" class="sm:hidden absolute top-0 left-0 z-[-1] w-[512px] h-[1115px]">
+        <div class="mt-[46px] md:mt-[56px]">
+            <img src="imges/logo-2-log-in.svg" alt="" class="w-[80px] h-[49px] md:w-[144px] md:h-[89px] mb-[18px] md:mb-7 mx-auto">
+            <h3 class="text-[22px] md:text-[40px] font-bold mb-9 md:mb-11 text-center">إلمام .. كُن مُلماً بمنشأتك</h3>
         </div>
-        <p class="leading-normal text-3xl ">   شكراً لتسجيلك في إلمام، لاستكمال عملية التسجيل يرجى الضغط على الزر أدناه لتأكيد عنوان البريد الإلكتروني الخاص بك وتفعيل الحساب</p>
-
-        <div class=" flex justify-end">
-
-            <a href="#" class=" text-white  hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold rounded-lg text-sm px-4 pb-2 pt-[11px]  dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 h-11 rounded-[10px]  justify-center min-w-28" style="
-            width: 233px;
-            height: 65px;
-            border-radius: 15px;
-            background: #14B411;
-            text-align: center;
-            font-size: 24px;
-            line-height: normal;
-        ">تفعيل الحساب</a>
+        <div class="bg-cyan-500 p-4 rounded-3xl mx-7 md:mx-[60px] xl:mx-[73px]"> 
+            <div class="bg-white rounded-3xl">
+                <h1 class="text-[22px] md:text-4xl xl:text-[40px] font-bold text-center pt-[34px] md:pt-[61px] mb-8"> تأكيد أو تفعيل الحساب</h1>
+                <div class="flex mr-2 md:mr-14 xl:mr-[70px] text-xs md:text-[26px] xl:text-3xl leading-normal">
+                    <p class="ml-3">مرحبا</p>
+                    <a href="">omar6685@hotmail.com</a>
+                </div>
+                <p class="mr-2 md:mr-14 xl:mr-[70px] mb-3 md:mb-5 xl:mb-8 ml-2 text-xs md:text-[26px] xl:text-3xl leading-normal">
+                    شكراً لتسجيلك في إلمام، لاستكمال عملية التسجيل يرجى 
+                    الضغط على الزر أدناه لتأكيد عنوان البريد الإلكتروني الخاص بك 
+                    وتفعيل الحساب
+                </p>
+                <button class="text-white bg-[#14B411] hover:bg-primary-800 focus:ring-4
+                 focus:ring-primary-300 font-bold rounded-lg text-xs md:text-xl	xl:text-2xl px-4 lg:px-5 py-2
+                  lg:py-2.5 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none
+                   dark:focus:ring-primary-800 w-[99px] h-[34px] md:w-[190px] md:h-[54px] xl:w-[233px] xl:h-[65px] rounded-[10px] flex justify-center
+                    min-w-28 lg:w-max mr-2 md:mr-14 xl:mr-[70px] mb-3 md:mb-8">تفعيل الحساب
+                </button>
+                <p class="mr-2 md:mr-14 xl:mr-[70px] font-bold text-[8px] md:text-xl xl:text-3xl mb-3 md:mb-8">
+                    إذا كان الزر لا يعمل، يمكنك نسخ ولصق الرابط التالي إلى متصفحك.
+                </p>
+                <a href="#" class="mr-2 md:mr-14 xl:mr-[70px] text-xs md:text-[26px] xl:text-3xl">https://www.etmamalarabia.sa/user_dash</a>
+                <p class="mr-2 md:mr-14 xl:mr-[70px] text-xs md:text-[26px] xl:text-3xl pb-3 md:pb-8  mt-3 md:mt-8 leading-normal">
+                    أطيب التحيات،
+                    <br>
+                    فريق إلمام
+                </p>
+            </div>
+            <div class="mt-[46px] md:mt-[56px]">
+                <img src="imges/logo-white.svg" alt="" class="w-[80px] h-[49px] md:w-[144px] md:h-[89px] mb-[18px] md:mb-7 mx-auto">
+                <h3 class="text-white text-[22px] md:text-[40px] font-bold mb-9 md:mb-11 text-center">إلمام .. كُن مُلماً بمنشأتك</h3>
+            </div>
         </div>
-
-        <h1>إذا كان الزر لا يعمل، يمكنك نسخ ولصق الرابط التالي إلى متصفحك.</h1>
-        <a href="https: //www.etmamalarabia.sa/user_dash">https: //www.etmamalarabia.sa/user_dash</a>
-        <img src="" alt="">
-        <div>
-            <h1>أطيب التحيات،</h1>
-            <h1>فريق إلمام</h1>
-        </div>
-    </div>
-            <img src="imges/logo-white.svg" alt="" class="m-auto mt-[]">
-            <h1 class="text-[40px] mt-[28px] text-center text-white mt-12">إلمام .. كُن مُلماً بمنشأتك</h1>
-    </div>
-    </div>
-</section>
-</body>
-<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
-
+    </body>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </html>
