copyright mt edit

--- a/New-password.html
+++ b/New-password.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Account activation message</title>
+        <title>new password</title>
     </head>
 	<script src="https://cdn.tailwindcss.com"></script>
     <script src="confing.js"></script>
@@ -64,7 +64,7 @@
 							<div class="">
 								<button type="submit" class="mt-10 md:mt-[67px] text-white bg-cyan-500 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-bold  text-sm  pb-2 m-auto dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800 rounded-[15px]  min-w-28  text-center block text-center text-xl w-full h-[45px] md:w-[500px] md:h-[60px] ">تأكيد</button>
 
-										<div class="mt-7 text-center text-gray-300 text-xs mt-[203%] sm:mt-[125%] md:mt-[30%] xl:mt-[83%]">
+										<div class="mt-7 text-center text-gray-300 text-xs mt-[203%] sm:mt-[125%] md:mt-[30%] xl:mt-[80%]">
 											<span class="text-base">
                     جميع الحقوق محفوظة © 2024 | لموقع إلمام
                     </div>
