--- a/log-in.html
+++ b/log-in.html
@@ -84,7 +84,7 @@
 									<p class="text-gray-400"> ليس لديك حساب؟<a href="#"
 										class="ext-sm  hover:text-[#25A0D5] text-[#25A0D5]"> إنشاء حساب</a></p>
 									</div>
-										<div class="mt-7 text-center text-gray-300 text-xs mt-[175%] sm:mt-[95%] md:mt-[15%] xl:mt-[65%]">
+										<div class="mt-7 text-center text-gray-300 text-xs mt-[120%] sm:mt-[40%] md:mt-[0%] xl:mt-28">
 											<span class="text-base">
                     جميع الحقوق محفوظة © 2024 | لموقع إلمام
                     </div>
