--- a/sing-up.html
+++ b/sing-up.html
@@ -82,7 +82,7 @@
 									<p class="text-gray-400">لديك حساب؟<a href="#"
 										class="ext-sm  hover:text-[#25A0D5] text-[#25A0D5] mr-2">تسجيل الدخول</a></p>
 									</div>
-										<div class="mt-7 text-center text-gray-300 text-xs mt-[175%] sm:mt-[95%] md:mt-[15%] xl:mt-[65%]">
+										<div class="mt-7 text-center text-gray-300 text-xs mt-[145%] sm:mt-[70%] md:mt-[0%] xl:mt-56">
 											<span class="text-base">
                     جميع الحقوق محفوظة © 2024 | لموقع إلمام
                     </div>
